# RasterRelay

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KONTEKST-DECYZJE.md  README.md  REBUILD.md  WEZLY-ARSENAL.md  comfyui-startup.log.err
comfy-workflows/: README.md  v1-inpaint-cropstitch.json  v2-inpaint-cropstitch.json  v3-lora-brushmask.json
comfy_nodes/: README.md  __init__.py  pyproject.toml
comfy_nodes/nodes/: __init__.py  area_match.py  background_preserve.py  color_calibrate.py  color_match.py  edge_harmonize.py  grain_transfer.py  lora_stack.py  mask_cropper.py  mask_edge_refine.py  match_and_align.py  pad_to_document.py  save_image_rgba.py  seamless_tone.py  selection_mask.py
comfy_nodes/server/: __init__.py  api.py
comfy_nodes/tests/: background_preserve_test.py  color_calibrate_test.py  color_harmonize_test.py  edge_harmonize_test.py  grain_transfer_test.py  mask_edge_refine_test.py  match_and_align_test.py  pad_to_document_test.py  practical_alignment_test.py  save_image_rgba_test.py  seamless_tone_test.py
docs/: development-setup.md  launcher-stage-1.md  project-rules.md  raport-sesji-2026-06-12.md  sources.md  uzytkowanie.md
launcher/: index.html  package-lock.json  package.json  vite.config.ts
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: lib.rs  main.rs
masks/: README.md
photoshop_plugin/: README.md  e2e-autostart.flag  index.html  manifest.json  styles.css
scripts/: audit-color-lock-workflow.py  build-comparison.ps1  (+12 more)
(+104 files in other folders)
