[package]
name = "rasterrelay-launcher"
version = "0.1.0"
description = "RasterRelay Launcher"
authors = ["RasterRelay"]
edition = "2021"

[lib]
name = "rasterrelay_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
